# streamripper

./: CMakeLists.txt
lib/: prefs.c
